overflowing text issues addressed

--- a/react-app/src/components/feed/profileCard/ProfileCard.css
+++ b/react-app/src/components/feed/profileCard/ProfileCard.css
@@ -44,7 +44,11 @@
 
 .profile-card-body-name {
     font-weight: var(--global-bold);
+    overflow: hidden;
+    padding: 0 0.5em;
     text-align: center;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .profile-card-body-text {
